--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
 
 <style>
-/* ===== CoreFlux Simpit — v15 (distinct config colours + flight pedal mount) ===== */
+/* ===== CoreFlux Simpit — v16 (pullout keyboard tray added) ===== */
 
 /* ---- Tokens ---- */
 :root{
@@ -1242,6 +1242,13 @@ footer{
           <input type="checkbox" data-price="120" data-label="MOUSE PAD BASE">
           <strong>MOUSE PAD BASE — $120</strong>
           <p>Keyboard and mouse tray. Converts rig into a full workstation.</p>
+        </label>
+
+        <!-- NEW: pullout keyboard tray -->
+        <label class="card" data-key="pulloutkb" style="cursor:pointer">
+          <input type="checkbox" data-price="160" data-label="PULLOUT KEYBOARD TRAY">
+          <strong>PULLOUT KEYBOARD TRAY — $160</strong>
+          <p>Slide-out typing surface with wrist support. Retracts clean for racing / flight so nothing hits your wheel, throttle or stick.</p>
         </label>
       </div>
 
